# blitzy-tgr-dnsmasq-rust

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  decision-log-config-i.md  decisions-config-h.md  executive-summary-config-h.html  executive-summary-config-i.html  findings-config-a.json  findings-config-h.json  results-snyk-code.sarif  results-snyk-deps.json  rust-toolchain.toml  sbom.cdx.json
.cargo/: config.toml
benches/: cache_performance.rs  dhcp_performance.rs  dns_performance.rs
blitzy/documentation/: Project Guide.md  Technical Specifications.md
blitzy/qa-evidence/: checkpoint1-evidence.txt  checkpoint2-evidence.txt  checkpoint4-evidence.txt  checkpoint5-evidence.txt  checkpoint6-evidence.txt
blitzy/qa-evidence/checkpoint3-evidence/: cdn-versions-loaded.txt  runtime-css-properties.txt
blitzy/qa-evidence/checkpoint6-evidence/: 00-baseline.txt  99-final-checksums.txt  99-post-cargo-checksums.txt  adversarial-tests.txt  api-resilience.txt  d1-install-pull.txt  d2-start-poll.txt  d3-scanner.txt  d4-harvest.txt  d5-normalize.txt  host-cleanstate.txt  idempotency-tests.txt  regression-tests.txt  system-continuity.txt  trap-tests.txt
blitzy/scripts/: .gitignore  README.md  run_sonarqube_scan.sh  sonar-project.properties  sonar_pipeline.py
docs/: architecture.md  migration_guide.md
examples/: dhcp_server.rs  simple_forwarder.rs
scripts/: normalize-findings-config-h.sh
src/: constants.rs  error.rs  lib.rs  main.rs  types.rs
src/config/: cli.rs  mod.rs  parser.rs  reload.rs  types.rs  validator.rs
src/dhcp/: common.rs  mod.rs
src/dhcp/lease/: database.rs  dns_integration.rs  mod.rs  script_hooks.rs
src/dhcp/v4/: constants.rs  message.rs  mod.rs  options.rs  protocol.rs  server.rs
src/dhcp/v6/: constants.rs  message.rs  mod.rs  options.rs  protocol.rs  server.rs
src/dns/: auth.rs  cache.rs  edns0.rs  filter.rs  forwarder.rs  matcher.rs  mod.rs  upstream.rs
src/dns/dnssec/: blockdata.rs  crypto.rs  mod.rs  trust_anchors.rs  validator.rs
src/dns/protocol/: compression.rs  constants.rs  message.rs  mod.rs  name.rs  record.rs
src/network/: arp.rs  conntrack.rs  interfaces.rs  ipset.rs  mod.rs  nftset.rs  sockets.rs
src/network/firewall/: ipset.rs  mod.rs  nftables.rs  pf.rs
src/network/platform/: bsd.rs  common.rs  linux.rs  macos.rs  mod.rs
src/platform/: dbus.rs  inotify.rs  mod.rs  privileges.rs  signals.rs  systemd.rs  ubus.rs
src/radv/: mod.rs  protocol.rs  slaac.rs
src/runtime/: event_loop.rs  mod.rs  reactor.rs  tasks.rs
src/tftp/: mod.rs  server.rs  transfer.rs
src/util/: helpers.rs  logging.rs  metrics.rs  mod.rs  patterns.rs  pcap.rs  random.rs
tests/: blitzy_adhoc_test_constants.rs  blitzy_adhoc_test_options_v6.rs  config_tests.rs  dhcp_integration_tests.rs  dns_integration_tests.rs  dnssec_tests.rs
tests/common/: mod.rs
tests/integration/: config_tests.rs  dhcp_tests.rs  dns_tests.rs  dnssec_tests.rs
