# dnsmasq is Copyright (c) 2000-2025 Simon Kelley
#
#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; version 2 dated June, 1991, or
#  (at your option) version 3 dated 29 June, 2007.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#    
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "dnsmasq"
version = "2.92.0"
edition = "2021"
rust-version = "1.91.0"
authors = ["Dnsmasq Contributors"]
license = "GPL-2.0-or-later OR GPL-3.0"
description = "Memory-safe DNS forwarder and DHCP server"
repository = "https://github.com/dnsmasq/dnsmasq"
readme = "README.md"
keywords = ["dns", "dhcp", "network", "server", "forwarder"]
categories = ["network-programming"]

[dependencies]
# Core async runtime - replaces C poll() event loop
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# DNS protocol implementation - replaces src/rfc1035.c and related files
hickory-proto = "0.25"
hickory-server = "0.25"
hickory-client = "0.25"
hickory-resolver = "0.25"

# Cryptography for DNSSEC - replaces Nettle library
ring = { version = "0.17", optional = true }

# Parsing and serialization
nom = "7.1"
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Command-line interface - replaces getopt_long()
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and observability - replaces src/log.c
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Platform-specific dependencies for Linux
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["socket", "net", "signal", "process", "user"] }
netlink-packet-route = { version = "0.20", optional = true }
rtnetlink = { version = "0.15", optional = true }
caps = "0.5"
libc = "0.2"

# Platform-specific dependencies for BSD (FreeBSD, OpenBSD, NetBSD)
[target.'cfg(any(target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
nix = { version = "0.29", features = ["socket", "net", "signal", "process", "user"] }
libc = "0.2"

# Platform-specific dependencies for macOS
[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["socket", "net", "signal", "process", "user"] }
libc = "0.2"

# Optional feature dependencies
[dependencies.zbus]
version = "5.1"
optional = true

[dependencies.mlua]
version = "0.10"
optional = true
features = ["lua54", "vendored"]

[dependencies.idna]
version = "1.0"
optional = true

[dependencies.notify]
version = "7.0"
optional = true

[dependencies.rustls]
version = "0.23"
optional = true

[dependencies.webpki]
version = "0.22"
optional = true

# Development and testing dependencies
[dev-dependencies]
proptest = "1.6"
mockall = "0.13"
criterion = "0.5"
tempfile = "3.14"
tokio-test = "0.4"

# Build dependencies
[build-dependencies]
# No build dependencies required

# Feature flags matching C HAVE_* compile-time options
[features]
default = ["dnssec", "idn"]

# HAVE_DNSSEC - DNSSEC validation support
dnssec = ["ring"]

# HAVE_DBUS - D-Bus IPC interface
dbus = ["zbus"]

# HAVE_LUASCRIPT - Lua scripting support
lua-scripts = ["mlua"]

# HAVE_IDN / HAVE_LIBIDN2 - Internationalized domain names
idn = ["idna"]

# HAVE_TFTP - TFTP server support
tftp = []

# HAVE_CONNTRACK - Linux connection tracking
conntrack = ["rtnetlink", "netlink-packet-route"]

# HAVE_NFTSET - nftables integration
nftset = []

# HAVE_IPSET - ipset integration
ipset = []

# HAVE_INOTIFY - File system monitoring
inotify = ["notify"]

# DNS-over-TLS support
dot = ["rustls", "webpki"]

# DNS-over-HTTPS support
doh = ["rustls", "webpki"]

# All optional features enabled
all-features = [
    "dnssec",
    "dbus",
    "lua-scripts",
    "idn",
    "tftp",
    "conntrack",
    "nftset",
    "ipset",
    "inotify",
    "dot",
    "doh"
]

# Binary target - drop-in replacement for C dnsmasq
[[bin]]
name = "dnsmasq"
path = "src/main.rs"

# Library target - for embedding dnsmasq functionality
[lib]
name = "dnsmasq"
path = "src/lib.rs"

# Release profile optimizations for production deployment
[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Single codegen unit for best optimization
strip = true            # Strip symbols for minimal binary size
panic = "abort"         # Abort on panic for smaller binary

# Development profile for faster compilation
[profile.dev]
opt-level = 0
debug = true

# Test profile
[profile.test]
opt-level = 1
debug = true

# Benchmark profile
[profile.bench]
inherits = "release"
